Dev-RBI/src/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>Built_up_area_Sq_Ft__c</fullName>
        <formula>TEXT(Unit_Type_Id__r.Built_up_area_Sq_Ft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Built up area (Sq Ft)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sq_Ft__c</fullName>
        <formula>TEXT(Unit_Type_Id__r.Carpet_Area_Sq_Ft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carpet Area (Sq Ft)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <formula>VALUE(TEXT( Floor__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Tower_Id__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Area_Sq_Ft__c</fullName>
        <formula>TEXT(Unit_Type_Id__r.Super_Area_Sq_Ft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Area (Sq Ft)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Floors__c</fullName>
        <description>This will get the Total floors from Tower formula field Total_Floors__c.</description>
        <formula>Tower_Id__r.Max_Floors__c</formula>
        <label>Total Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower_Id__c</fullName>
        <label>Tower Id</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Type_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Type Id</label>
        <referenceTo>Unit_Type__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <formula>TEXT(Unit_Type_Id__r.Unit_Type__c)</formula>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unit UniqueKey</label>
        <length>98</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Super_Area_Sq_Ft__c</columns>
        <columns>Project_Id__c</columns>
        <columns>Unit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Floor_Validation</fullName>
        <active>true</active>
        <description>User will not allowed to enter not more that total floors in tower (In Parent Total Floors formula field)object.</description>
        <errorConditionFormula>IF(ISBLANK(Total_Floors__c) || (Total_Floors__c==0), false, (VALUE(TEXT(Floor__c)) &gt; Total_Floors__c))</errorConditionFormula>
        <errorMessage>Your floor value is exceeding the Total number of floor for this particular tower.</errorMessage>
    </validationRules>
</CustomObject>